k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pyn3k8
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
