k8/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: pyn3k8
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
