k8/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: pyn3k8
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
