k8/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: pyn3k8
spec:
  type: ClusterIP
  selector:
    app: worker
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
